# Cartesian-Plane

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
Tests/: mouseWheel.py
examples/: Objects.py  Senoid.py  demo.py
src/cartesianPlane/: __init__.py  __main__.py  cartesianObjects  cartesianObjects.py  colors.py
tests/: pyopenglTest.py
