[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartesian-plane"
version = "1.0.1"
description = "Provides a cartesian plane canvas able to move and zooming in pygame."
readme = "README.md"
authors = [{ name = "murilo-henrique060", email = "henrique.henryconde@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["cartesian plane", "pygame", "canvas"]
dependencies = [
    "pygame>=2.1.2",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/murilo-henrique060/Cartesian-Plane"